--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <div class="editor no-print">
         <h2>✏️ Plan bearbeiten</h2>
 
+        <div class="icon-picker">
+            <div class="icon-picker-label">Icon-Auswahl</div>
+            <div id="icon-picker" class="icon-picker-grid"></div>
+            <div class="icon-picker-hint">Tipp: Emoji-Feld anklicken, dann Symbol waehlen.</div>
+        </div>
+
         <div class="editor-section">
             <h3>Titel & Kopfzeile</h3>
             <input type="text" id="planTitle" value="Jakobs Wochenplan" oninput="updatePlan()">
