use icon dropdown per task

--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
     <div class="editor no-print">
         <h2>✏️ Plan bearbeiten</h2>
 
-        <div class="icon-picker">
-            <div class="icon-picker-label">Icon-Auswahl</div>
-            <div id="icon-picker" class="icon-picker-grid"></div>
-            <div class="icon-picker-hint">Tipp: Emoji-Feld anklicken, dann Symbol waehlen.</div>
-        </div>
-
         <div class="editor-section">
             <h3>Titel & Kopfzeile</h3>
-            <input type="text" id="planTitle" value="Jakobs Wochenplan" oninput="updatePlan()">
+            <input type="text" id="planTitle" value="Wochenplan" oninput="updatePlan()">
         </div>
 
         <div class="editor-section">
@@ -49,7 +43,7 @@
 
     <div class="page">
         <header>
-            <h1 id="previewTitle">Jakobs Wochenplan</h1>
+            <h1 id="previewTitle">Wochenplan</h1>
             <div class="week">
                 <label>Woche vom:</label>
                 <span class="line"></span>
