--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <span class="chip funTag">Freizeit & Ausgleich</span>
         </div>
 
-        <table>
+        <div class="table-wrap">
+            <table>
             <colgroup>
                 <col class="col-activity" />
                 <col class="col-day" /><col class="col-day" /><col class="col-day" /><col class="col-day" /><col class="col-day" /><col class="col-day" /><col class="col-day" />
@@ -71,7 +72,8 @@
             </thead>
             <tbody id="planTableBody">
                 </tbody>
-        </table>
+            </table>
+        </div>
 
         <section class="reflect">
             <div class="card schoolTag"><h3>✅ Das hat super geklappt</h3><p></p></div>
