--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
         </div>
 
         <div class="editor-section">
+            <h3>Woche</h3>
+            <div class="date-row">
+                <label for="weekFromInput">Von</label>
+                <input type="date" id="weekFromInput" class="date-input" onchange="updateWeekDate('dateFrom', this.value)">
+            </div>
+            <div class="date-row">
+                <label for="weekToInput">Bis</label>
+                <input type="date" id="weekToInput" class="date-input" onchange="updateWeekDate('dateTo', this.value)">
+            </div>
+        </div>
+
+        <div class="editor-section">
             <h3>📚 Schule & Lernen</h3>
             <div id="list-school"></div>
             <button onclick="addItem('school')">+ Aktivität hinzufügen</button>
@@ -46,9 +58,9 @@
             <h1 id="previewTitle">Wochenplan</h1>
             <div class="week">
                 <label>Woche vom:</label>
-                <input type="date" id="weekFrom" class="line" onchange="updateWeekDate('dateFrom', this.value)">
+                <span id="weekFromDisplay" class="line"></span>
                 <label>bis:</label>
-                <input type="date" id="weekTo" class="line" onchange="updateWeekDate('dateTo', this.value)">
+                <span id="weekToDisplay" class="line"></span>
             </div>
         </header>
 
